# sdks

./: .gitignore  README.md
.github/: pull_request_template.md
.github/workflows/: npm-publish.yml
docs/: index.mdx  mint.json  openapi.yaml
docs/advanced/: self-hosting.mdx
docs/concepts/: accounts.mdx  automations.mdx  dashboards.mdx  data-sources.mdx  embed-users.mdx  questions.mdx  sessions.mdx  teams.mdx  widgets.mdx
docs/get-started/: creating-first-dashboard.mdx  customising-look-and-feel.mdx  (+1 more)
go/: go.mod
go/pkg/: client.go
js/: README.md  bun.lockb  jest.config.js  jsr.json  package.json  tsconfig.json  tsup.config.ts
node/: README.md  package-lock.json  package.json
node-example/: .env  bun.lockb  index.html  index.js  package-lock.json  package.json
python/: LICENSE  README.md  README.txt  pyproject.toml  setup.py
python/onvo/: __init__.py  accounts.py  automations.py  base_resource.py  dashboards.py  datasources.py  embed_users.py  onvo.py  resource.py  teams.py
python/onvo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/onvo/resources/: accounts.py  automations.py  dashboard.py  dashboards.py  datasources.py  embed_users.py  questions.py  sessions.py  teams.py  widgets.py
python/onvo/resources/dashboard_resources/: base_resource.py  datasources.py
python/tests/: base_test.py  test_accounts.py  test_automations.py  test_dashboards.py  test_datasources.py  test_embed_users.py  test_teams.py
python/tests/dashboard/: base_test.py  test_datasources.py  test_questions.py  test_sessions.py  test_widgets.py
react/: .babelrc.json  README.md  license  package-lock.json  package.json  postcss.config.js  rollup.config.mjs  tailwind.config.js  tsconfig.json
ruby/: Gemfile  README.md  Rakefile  onvo-0.0.0.gem  onvo-0.0.1.gem  onvo-0.1.0.gem  onvo-0.1.1.gem  onvo-0.1.2.gem  onvo-0.1.3.gem  onvo-0.1.4.gem  onvo.gemspec
rust/: .gitignore  Cargo.toml  README.md  filter.sh
rust/src/: api.rs  client.rs  dashboard.rs  errors.rs  lib.rs  main.rs  middleware.rs  resources.rs
rust/src/api/dashboard/: requests.rs  responses.rs
rust/src/resources/accounts/: api.rs  models.rs
rust/src/resources/automations/: api.rs  models.rs
rust/src/resources/dashboards/: api.rs  models.rs
rust/src/resources/datasources/: api.rs  models.rs
rust/src/resources/embed_users/: api.rs  models.rs
rust/src/resources/questions/: api.rs  models.rs
rust/src/resources/sessions/: api.rs  models.rs
rust/src/resources/teams/: api.rs  models.rs
rust/src/resources/widgets/: api.rs  models.rs
rust/tests/: accounts_tests.rs  automations_tests.rs  dashboards_tests.rs  datasources_tests.rs  embed_users_tests.rs  helpers.rs  questions_tests.rs  sessions_tests.rs  teams_tests.rs  widgets_tests.rs
web-components/: README.md  package.json  predeploy.sh  tsconfig.json
(+492 files in other folders)
