[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "onvo"
version = "0.2.0"
authors = [{ name = "Bryan Davis", email = "bryandavis999.dev@gmail.com" }]
description = "Communicate with the Onvo platform."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
keywords = ["python", "onvo"]

[project.urls]
Homepage = "https://github.com/onvo-ai/sdks"
Issues = "https://github.com/onvo-ai/sdks/issues"
