[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.30", features = ["serde"]}
derive_builder = "0.12.0"
reqwest = "0.11.20"
http = "0.2.9"
serde = "1.0.188"
serde_json = "1.0.106"
thiserror = "1.0.48"
url = "2.4.1"
rustify = "0.5.3"
rustify_derive = "0.5.2"
