[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.106"
thiserror = "1.0.48"
url = "2.4.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "0.31"

